# cpu-first-ai

./: .bandit  .coveragerc  .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  USER_MANUAL.md  cliff.toml  ingestion.py  pyproject.toml  requirements.txt  run_app.sh  storage.py  streamlit_app.py  test1.py  transformation.py
.agents/: AGENTS.md
.specify/memory/: constitution.md
.specify/templates/: bug_report.md  feature_request.md  plan-template.md  spec-template.md  spec.md  tasks-template.md
agent/: AGENT.md
docs/: gitlab-runner.md
scripts/: download_model.sh
scripts/ci/: audit.sh  compile_python.py  forbid_cloud_clients.py  lint.sh  run_tests.sh  secret_scan.sh  test_storage_contract.py  type_check.sh
specs/: ocr_pipeline_spec.md  storage_spec.md  test_ingestion.py  test_storage.py  test_transformation.py  transformation_spec.md
specs/llm-transformation/: plan.md  spec.md  tasks.md
specs/ocr-pipeline/: plan.md  spec.md  tasks.md
specs/storage/: plan.md  spec.md  tasks.md
