[project]
name = "image-text-extractor"
version = "1.0.0"
description = "Offline OCR text extraction from images using Tesseract and local Llama post-processing"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true
warn_unused_ignores = true
exclude = ["my/", "builds/", ".mypy_cache/"]

[tool.pytest.ini_options]
addopts = "--cov=. --cov-report=term-missing --cov-report=xml"
testpaths = ["specs", "."]
python_files = ["*_test.py", "*_spec.py", "test_*.py"]
norecursedirs = ["my", "builds", ".mypy_cache", "__pycache__"]

[tool.coverage.run]
source = ["."]
omit = ["my/*", "builds/*", "__pycache__/*", ".mypy_cache/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.bandit]
exclude_dirs = ["my", "builds", ".mypy_cache", "__pycache__", ".git", ".github", "cache"]
tests = ["B101", "B102", "B103", "B104", "B105", "B106", "B107", "B108", "B110", "B112", "B201", "B301", "B302", "B303", "B304", "B305", "B306", "B307", "B308", "B309", "B310", "B311", "B312", "B313", "B314", "B315", "B316", "B317", "B318", "B319", "B320", "B321", "B322", "B323", "B324", "B325", "B401", "B402", "B403", "B404", "B405", "B406", "B407", "B408", "B409", "B410", "B411", "B412", "B413", "B501", "B502", "B503", "B504", "B505", "B506", "B507", "B508", "B509", "B510", "B511", "B601", "B602", "B603", "B604", "B605", "B606", "B607", "B608", "B609", "B610", "B611", "B701"]

[tool.pip-audit]
strict = true
